首页html文件分离，并做好展示功能

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/foot.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/foot.html
@@ -7,7 +7,7 @@
 <body>
 <footer th:fragment="foot">
     <div class="footavatar">
-        <img src="images/photo.jpg" class="footphoto">
+        <img src="/images/photo.jpg" class="footphoto">
         <ul class="footinfo">
             <p class="fname"><a href="/dancesmile" >青轻飞扬</a>  </p>
             <p class="finfo">性别：女 年龄：25岁</p>
@@ -16,14 +16,14 @@
     <section class="visitor">
         <h2>最近访客</h2>
         <ul>
-            <li><a href="/"><img src="images/s0.jpg"></a></li>
-            <li><a href="/"><img src="images/s1.jpg"></a></li>
-            <li><a href="/"><img src="images/s2.jpg"></a></li>
-            <li><a href="/"><img src="images/s3.jpg"></a></li>
-            <li><a href="/"><img src="images/s5.jpg"></a></li>
-            <li><a href="/"><img src="images/s6.jpg"></a></li>
-            <li><a href="/"><img src="images/s7.jpg"></a></li>
-            <li><a href="/"><img src="images/s8.jpg"></a></li>
+            <li><a href="/"><img src="/images/s0.jpg"></a></li>
+            <li><a href="/"><img src="/images/s1.jpg"></a></li>
+            <li><a href="/"><img src="/images/s2.jpg"></a></li>
+            <li><a href="/"><img src="/images/s3.jpg"></a></li>
+            <li><a href="/"><img src="/images/s5.jpg"></a></li>
+            <li><a href="/"><img src="/images/s6.jpg"></a></li>
+            <li><a href="/"><img src="/images/s7.jpg"></a></li>
+            <li><a href="/"><img src="/images/s8.jpg"></a></li>
         </ul>
     </section>
     <div class="Copyright">
