--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
@@ -20,14 +20,14 @@
     <section class="newpic">
         <h2>最新照片</h2>
         <ul>
-            <li><a href="/"><img src="images/01.jpg"></a></li>
-            <li><a href="/"><img src="images/02.jpg"></a></li>
-            <li><a href="/"><img src="images/03.jpg"></a></li>
-            <li><a href="/"><img src="images/04.jpg"></a></li>
-            <li><a href="/"><img src="images/05.jpg"></a></li>
-            <li><a href="/"><img src="images/06.jpg"></a></li>
-            <li><a href="/"><img src="images/07.jpg"></a></li>
-            <li><a href="/"><img src="images/08.jpg"></a></li>
+            <li><a href="/"><img src="/images/01.jpg"></a></li>
+            <li><a href="/"><img src="/images/02.jpg"></a></li>
+            <li><a href="/"><img src="/images/03.jpg"></a></li>
+            <li><a href="/"><img src="/images/04.jpg"></a></li>
+            <li><a href="/"><img src="/images/05.jpg"></a></li>
+            <li><a href="/"><img src="/images/06.jpg"></a></li>
+            <li><a href="/"><img src="/images/07.jpg"></a></li>
+            <li><a href="/"><img src="/images/08.jpg"></a></li>
         </ul>
     </section>
     <section class="taglist">
