--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="/js/modernizr.js"></script>
     <![endif]-->
@@ -12,18 +12,14 @@
 <header th:fragment="head">
     <nav id="nav">
         <ul>
-            <li><a href="/">网站首页</a></li>
-            <li><a href="/download/" target="_blank">模板</a></li>
-            <li><a href="/web/"  target="_blank">关于我们</a></li>
-            <li><a href="/jstt/" target="_blank">我们的故事</a></li>
-            <li><a href="/newshtml5/" target="_blank">我们的蜜月</a></li>
-            <li><a href="/news/case/" target="_blank">婚礼现场</a></li>
-            <li><a href="/news/s/" target="_blank">婚纱摄影</a></li>
-            <li><a href="/newstalk/" target="_blank">我们的博客</a></li>
-            <li><a href="/news/jsex/" target="_blank">联系我们</a></li>
+            <li><a href="*">网站首页</a></li>
+            <li><a href="*" target="_blank">归档</a></li>
+            <li><a href="*" target="_blank">友链</a></li>
+            <li><a href="*"  target="_blank">关于本博客</a></li>
+            <li><a href="*" target="_blank">联系作者</a></li>
         </ul>
     </nav>
-    <script src="js/silder.js"></script><!--获取当前页导航 高亮显示标题-->
+    <script src="/js/silder.js"></script><!--获取当前页导航 高亮显示标题-->
 </header>
 </body>
 </html>
