--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
@@ -16,15 +16,31 @@
 
     <div class="blogitem">
 
-              <article th:each="content1 : ${contents.data}">
-                <h2 class="title"><a href="/" ><span th:text="${contents.pageNum}" /></a></h2>
-                <ul class="text"></ul>
+              <article th:each="content : ${contents.data}">
+                <h2 class="title"><a href="/" ><span th:text="${content.title}" /></a></h2>
+                <ul class="text">
+                    <span th:text="${content.content}" />
+                </ul>
                 <div class="textfoot">
                   <a href="/">阅读全文</a><a href="/">评论</a><a href="/">转载</a>
                 </div>
               </article>
 
-      <div class="pages"><span>1</span><a href="/" hidefocus="">2</a><a href="/" hidefocus="">3</a><a href="/" class="next">下一页&gt;&gt;</a></div>
+      <div class="pages">
+          <label  th:each="pagebar : ${contents.pageBar}" >
+            <label th:if="${pagebar} eq ${contents.pageNum}">
+                <a th:href="@{'/index/page/'+${pagebar}}" style="background-color: #f16e50;">
+                    <label style="padding-left: 5px;" th:text="${pagebar}"/>
+                </a>
+            </label>
+              <label th:if="${pagebar} ne ${contents.pageNum}">
+                  <a th:href="@{'/index/page/'+${pagebar}}">
+                      <label style="padding-left: 5px;" th:text="${pagebar}"/>
+                  </a>
+              </label>
+          </label>
+            <a href="/" class="next">下一页&gt;&gt;</a>
+      </div>
     </div>
 
  </div>
