完成友链和归档的开发

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/static/css/styles.css
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/static/css/styles.css
@@ -1,7 +1,7 @@
 @charset "gb2312";
 /* CSS Document */
 * { margin: 0; padding: 0 }
-body { background: #DDD6CC; font: 12px "ËÎÌו", "Arial Narrow", HELVETICA; color: #3F3E3C; line-height: 1.5; }
+body { background: #DDD6CC;font: 12px "ËÎÌו", "Arial Narrow", HELVETICA; color: #3F3E3C; line-height: 1.5;height: auto }
 img { border: 0; vertical-align: middle }
 p { display: block; }
 ul { list-style: none; }
