--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
@@ -15,7 +15,7 @@
     </section>
     <div class="userinfo">
         <p class="q-fans"> 粉丝：<a href="/" target="_blank">167</a></p>
-        <p class="btns"><a href="/" target="_blank" >私信</a><a href="/" target="_blank">相册</a><a href="/" target="_blank">存档</a></p>
+        <p class="q-fans">总浏览数：<a href="/" target="_blank" >888</a></p>
     </div>
     <section class="newpic">
         <h2>最新照片</h2>
