--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/contact.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/contact.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"/>
 <head>
     <meta charset="UTF-8">
-    <title>听雨博客，诚意推荐</title>
+    <title>联系我们</title>
     <meta name="keywords" content="Listeningrain,听雨,博客" />
     <meta name="description" content="小清新风个人博客,简洁风" />
 </head>
