--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/btn.css" rel="stylesheet">
+    <link href="/css/code.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="/js/modernizr.js"></script>
     <![endif]-->
@@ -16,7 +17,7 @@
             <li><a href="/">首页</a></li>
             <li><a href="/index/archive" >归档</a></li>
             <li><a href="/index/link">友链</a></li>
-            <li><a href="javascript:void(0)" >关于</a></li>
+            <li><a href="/index/about" >关于</a></li>
             <li><a href="javascript:void(0)" >联系作者</a></li>
         </ul>
     </nav>
