完成后台管理模块文章管理和友链管理的部分功能

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
@@ -14,7 +14,7 @@
             <ul class="navContent" style="display:block">
                 <li>
                     <div class="showtitle" style="width:100px;"><img src="img/leftimg.png" />文章管理</div>
-                    <a href="message.html"><span class="sublist-icon glyphicon glyphicon-envelope"></span><span class="sub-title">文章管理</span></a>
+                    <a href="/admin/index/list"><span class="sublist-icon glyphicon glyphicon-envelope"></span><span class="sub-title">文章管理</span></a>
                 </li>
                 <li>
                     <div class="showtitle" style="width:100px;"><img src="img/leftimg.png" />发布文章</div>
@@ -22,7 +22,11 @@
                 </li>
                 <li>
                     <div class="showtitle" style="width:100px;"><img src="img/leftimg.png" />友链管理</div>
-                    <a href="identify.html"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">友链管理</span></a>
+                    <a href="/admin/index/link"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">友链管理</span></a>
+                </li>
+                <li>
+                    <div class="showtitle" style="width:100px;"><img src="img/leftimg.png" />分类管理</div>
+                    <a href="identify.html"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">分类管理</span></a>
                 </li>
             </ul>
         </div>
