--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
@@ -19,7 +19,7 @@
               <article >
                 <h2 class="title"><a href="/" ><span th:text="${content.data.title}" /></a></h2>
                 <ul class="text">
-                    <span th:text="${content.data.content}" />
+                    <span th:utext="${content.data.content}" />
                 </ul>
                 <div class="textfoot">
                   <a href="/">点赞</a><a href="/">评论</a><a href="/">转载</a>
