--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
@@ -19,7 +19,7 @@
               <article th:each="content : ${contents.data}">
                 <h2 class="title"><a th:href="@{'/index/post/'+${content.cid}}" ><span th:text="${content.title}" /></a></h2>
                 <ul class="text">
-                    <span th:text="${content.content}" />
+                    <span th:utext="${content.content}" />
                 </ul>
                 <div class="textfoot">
                   <a th:href="@{'/index/post/'+${content.cid}}">阅读更多>>></a>
