--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/head.html
@@ -10,7 +10,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body style="padding: 0;margin: 0">
 <header th:fragment="head">
     <nav id="nav">
         <ul>
