完成后台友链的修改功能

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
@@ -12,7 +12,7 @@
     <link title="green" href="/admin_/css/dermagreen.css" rel="stylesheet" type="text/css" disabled="disabled"/>
     <link title="orange" href="/admin_/css/dermaorange.css" rel="stylesheet" type="text/css" disabled="disabled"/>
     <link href="/admin_/css/templatecss.css" rel="stylesheet" title="" type="text/css" />
-    <script src="/admin_/script/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
     <script src="/admin_/script/jquery.cookie.js" type="text/javascript"></script>
     <script src="/admin_/bootstrap-3.3.5-dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/admin_/script/manage.js" type="text/javascript"></script>
