--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
@@ -70,7 +70,7 @@
 
                <div class="clearfix"></div>
 
-               <div class="text-right">
+               <div class="text-right" style="margin-bottom: 50px">
                    <a class="btn btn-default waves-effect waves-light" href="/admin/article">返回列表</a>
                    <button type="button" class="btn btn-primary waves-effect waves-light" onclick="subArticle('publish');">
                        保存文章
