--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
@@ -16,6 +16,7 @@
     <script src="/admin_/script/jquery.cookie.js" type="text/javascript"></script>
     <script src="/admin_/bootstrap-3.3.5-dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/admin_/script/manage.js" type="text/javascript"></script>
+    <script src="/admin_/script/jquery.validate.js" type="text/javascript"></script>
 
 </head>
 <body>
